week-08/day-03/.metadata/.plugins/org.eclipse.cdt.ui/gpio_led.build.log
11:54:34 **** Incremental Build of configuration Debug for project gpio_led ****
make -j2 all 
Building file: ../src/main.c
Invoking: MCU GCC Compiler
Building file: ../Utilities/Components/wm8994/wm8994.c
C:\green-fox\week-08\day-02\gpio_led\Debug
arm-none-eabi-gcc -mcpu=cortex-m7 -mthumb -mfloat-abi=hard -mfpu=fpv5-sp-d16 -DSTM32 -DSTM32F7 -DSTM32F746NGHx -DSTM32F746G_DISCO -DDEBUG -DSTM32F746xx -DUSE_HAL_DRIVER -I"C:/green-fox/week-08/day-02/gpio_led/Utilities/Components/ampire480272" -I"C:/green-fox/week-08/day-02/gpio_led/Utilities/Components/n25q512a" -I"C:/green-fox/week-08/day-02/gpio_led/Utilities/Components/s5k5cag" -I"C:/green-fox/week-08/day-02/gpio_led/Utilities/Components/mfxstm32l152" -I"C:/green-fox/week-08/day-02/gpio_led/CMSIS/device" -I"C:/green-fox/week-08/day-02/gpio_led/Utilities/Components/n25q128a" -I"C:/green-fox/week-08/day-02/gpio_led/Utilities/Components/ts3510" -I"C:/green-fox/week-08/day-02/gpio_led/Utilities/Components/st7735" -I"C:/green-fox/week-08/day-02/gpio_led/Utilities/Components/rk043fn48h" -I"C:/green-fox/week-08/day-02/gpio_led/HAL_Driver/Inc/Legacy" -I"C:/green-fox/week-08/day-02/gpio_led/Utilities/Components/ov9655" -I"C:/green-fox/week-08/day-02/gpio_led/Utilities/Components/otm8009a" -I"C:/green-fox/week-08/day-02/gpio_led/Utilities/STM32746G-Discovery" -I"C:/green-fox/week-08/day-02/gpio_led/Utilities/Components/Common" -I"C:/green-fox/week-08/day-02/gpio_led/HAL_Driver/Inc" -I"C:/green-fox/week-08/day-02/gpio_led/Utilities/Components/stmpe811" -I"C:/green-fox/week-08/day-02/gpio_led/Utilities/Components/wm8994" -I"C:/green-fox/week-08/day-02/gpio_led/Utilities/Fonts" -I"C:/green-fox/week-08/day-02/gpio_led/Utilities/Components/ft5336" -I"C:/green-fox/week-08/day-02/gpio_led/inc" -I"C:/green-fox/week-08/day-02/gpio_led/Utilities/Components/ft6x06" -I"C:/green-fox/week-08/day-02/gpio_led/Utilities/Components/exc7200" -I"C:/green-fox/week-08/day-02/gpio_led/Utilities/Components/st7789h2" -I"C:/green-fox/week-08/day-02/gpio_led/Utilities/Log" -I"C:/green-fox/week-08/day-02/gpio_led/Utilities/Components/adv7533" -I"C:/green-fox/week-08/day-02/gpio_led/Utilities/Components/ampire640480" -I"C:/green-fox/week-08/day-02/gpio_led/CMSIS/core" -I"C:/green-fox/week-08/day-02/gpio_led/Utilities/Components/mx25l512" -O0 -g3 -Wall -fmessage-length=0 -ffunction-sections -c -MMD -MP -MF"src/main.d" -MT"src/main.o" -o "src/main.o" "../src/main.c"
Invoking: MCU GCC Compiler
C:\green-fox\week-08\day-02\gpio_led\Debug
arm-none-eabi-gcc -mcpu=cortex-m7 -mthumb -mfloat-abi=hard -mfpu=fpv5-sp-d16 -DSTM32 -DSTM32F7 -DSTM32F746NGHx -DSTM32F746G_DISCO -DDEBUG -DSTM32F746xx -DUSE_HAL_DRIVER -I"C:/green-fox/week-08/day-02/gpio_led/Utilities/Components/ampire480272" -I"C:/green-fox/week-08/day-02/gpio_led/Utilities/Components/n25q512a" -I"C:/green-fox/week-08/day-02/gpio_led/Utilities/Components/s5k5cag" -I"C:/green-fox/week-08/day-02/gpio_led/Utilities/Components/mfxstm32l152" -I"C:/green-fox/week-08/day-02/gpio_led/CMSIS/device" -I"C:/green-fox/week-08/day-02/gpio_led/Utilities/Components/n25q128a" -I"C:/green-fox/week-08/day-02/gpio_led/Utilities/Components/ts3510" -I"C:/green-fox/week-08/day-02/gpio_led/Utilities/Components/st7735" -I"C:/green-fox/week-08/day-02/gpio_led/Utilities/Components/rk043fn48h" -I"C:/green-fox/week-08/day-02/gpio_led/HAL_Driver/Inc/Legacy" -I"C:/green-fox/week-08/day-02/gpio_led/Utilities/Components/ov9655" -I"C:/green-fox/week-08/day-02/gpio_led/Utilities/Components/otm8009a" -I"C:/green-fox/week-08/day-02/gpio_led/Utilities/STM32746G-Discovery" -I"C:/green-fox/week-08/day-02/gpio_led/Utilities/Components/Common" -I"C:/green-fox/week-08/day-02/gpio_led/HAL_Driver/Inc" -I"C:/green-fox/week-08/day-02/gpio_led/Utilities/Components/stmpe811" -I"C:/green-fox/week-08/day-02/gpio_led/Utilities/Components/wm8994" -I"C:/green-fox/week-08/day-02/gpio_led/Utilities/Fonts" -I"C:/green-fox/week-08/day-02/gpio_led/Utilities/Components/ft5336" -I"C:/green-fox/week-08/day-02/gpio_led/inc" -I"C:/green-fox/week-08/day-02/gpio_led/Utilities/Components/ft6x06" -I"C:/green-fox/week-08/day-02/gpio_led/Utilities/Components/exc7200" -I"C:/green-fox/week-08/day-02/gpio_led/Utilities/Components/st7789h2" -I"C:/green-fox/week-08/day-02/gpio_led/Utilities/Log" -I"C:/green-fox/week-08/day-02/gpio_led/Utilities/Components/adv7533" -I"C:/green-fox/week-08/day-02/gpio_led/Utilities/Components/ampire640480" -I"C:/green-fox/week-08/day-02/gpio_led/CMSIS/core" -I"C:/green-fox/week-08/day-02/gpio_led/Utilities/Components/mx25l512" -O0 -g3 -Wall -fmessage-length=0 -ffunction-sections -c -MMD -MP -MF"Utilities/Components/wm8994/wm8994.d" -MT"Utilities/Components/wm8994/wm8994.o" -o "Utilities/Components/wm8994/wm8994.o" "../Utilities/Components/wm8994/wm8994.c"
../src/main.c: In function 'main':
../src/main.c:133:4: error: too few arguments to function 'BSP_LED_Off'
    BSP_LED_Off();
    ^~~~~~~~~~~
In file included from ../src/main.c:11:0:
C:/green-fox/week-08/day-02/gpio_led/Utilities/STM32746G-Discovery/stm32746g_discovery.h:309:11: note: declared here
 void      BSP_LED_Off(Led_TypeDef Led);
           ^~~~~~~~~~~
Finished building: ../Utilities/Components/wm8994/wm8994.c
src/subdir.mk:27: recipe for target 'src/main.o' failed
make: *** [src/main.o] Error 1
make: *** Waiting for unfinished jobs....
 

11:54:35 Build Finished (took 1s.342ms)

